5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4351/executions/1721_3031.log
== TEST (2019-05-02 18:32:29) 
-- CODE:
x=float(input("valor de x: "))
if (x<=1):
	x=1
	print(round(x, 2)
elif (x>1 and x<=2):
	x=2
	print(round(x, 2)
elif (x>2 and x<=3):
	x=x**2
	print(round(x, 2)
elif (x>3):
	x=x**3
	print(round(x, 2))
else:
	print("Entrada invalida")
-- ERROR:
File "XXXX", line 5
    elif (x>1 and x<=2):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:33:19) 
-- CODE:
x=float(input("valor de x: "))
if (x<=1):
	x=1
	print(round(x, 2)
elif (x>1 and x<=2):
	x=2
	print(round(x, 2)
elif (x>2 and x<=3):
	x=x**2
	print(round(x, 2)
elif (x>3):
	x=x**3
	print(round(x, 2))
else:
	print("Entrada invalida")
-- ERROR:
File "XXXX", line 5
    elif (x>1 and x<=2):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:33:41) 
-- CODE:
x=float(input("valor de x: "))
if (x<=1):
	x=1
	print(round(x, 2)
elif (x > 1 and x<=2):
	x=2
	print(round(x, 2)
elif (x>2 and x<=3):
	x=x**2
	print(round(x, 2)
elif (x>3):
	x=x**3
	print(round(x, 2))
else:
	print("Entrada invalida")
-- ERROR:
File "XXXX", line 5
    elif (x > 1 and x<=2):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:34:38) 
-- CODE:
x=float(input("valor de x: "))
if (x<=1):
	print(round(x=1, 2)
elif (x and x<=2):
	x=2
	print(round(x, 2)
elif (x>2 and x<=3):
	x=x**2
	print(round(x, 2)
elif (x>3):
	x=x**3
	print(round(x, 2))
else:
	print("Entrada invalida")
-- ERROR:
File "XXXX", line 4
    elif (x and x<=2):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:34:54) 
-- CODE:
x=float(input("valor de x: "))
if (x<=1):
	print(round(x=1, 2)
elif (x>1 and x<=2):
	x=2
	print(round(x, 2)
elif (x>2 and x<=3):
	x=x**2
	print(round(x, 2)
elif (x>3):
	x=x**3
	print(round(x, 2))
else:
	print("Entrada invalida")
-- ERROR:
File "XXXX", line 4
    elif (x>1 and x<=2):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:35:10) 
-- CODE:
x=float(input("valor de x: "))
if (x<=1):
	print(round(x=1, 2)
elif (x>1) and (x<=2):
	x=2
	print(round(x, 2)
elif (x>2 and x<=3):
	x=x**2
	print(round(x, 2)
elif (x>3):
	x=x**3
	print(round(x, 2))
else:
	print("Entrada invalida")
-- ERROR:
File "XXXX", line 4
    elif (x>1) and (x<=2):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:41:01) 
-- CODE:
x= float(input("valor de x: "))

if (x<=1):
	x=1
	print(round(x, 2))
elif (not x=1 and x>1 and x<=2):
	x=2
	print(round(x, 2))
elif (not x=2 and x>2 and x<=3):
	x= x**2
	print(round(x, 2))
elif (not x=3 and x>3):
	x=x**3
	print(x)
else:
	print("Entrada invalida")
		
-- ERROR:
File "XXXX", line 6
    elif (not x=1 and x>1 and x<=2):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:41:42) 
-- CODE:
x= float(input("valor de x: "))

if (x<=1):
	x=1
	print(round(x, 2))
elif (not (x=1) and (x>1) and (x<=2)):
	x=2
	print(round(x, 2))
elif (not x=2 and x>2 and x<=3):
	x= x**2
	print(round(x, 2))
elif (not x=3 and x>3):
	x=x**3
	print(x)
else:
	print("Entrada invalida")
		
-- ERROR:
File "XXXX", line 6
    elif (not (x=1) and (x>1) and (x<=2)):
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:42:09) 
-- CODE:
x= float(input("valor de x: "))

if (x<=1):
	x=1
	print(round(x, 2))

		
-- ERROR:
File "XXXX", line 6
    elif (not (x=1) and (x>1) and (x<=2)):
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:42:19) 
-- CODE:
x= float(input("valor de x: "))

if (x<=1):
	x=1
	print(round(x, 2))

		
-- ERROR:
File "XXXX", line 6
    elif (not (x=1) and (x>1) and (x<=2)):
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:43:03) 
-- CODE:
x= float(input("valor de x: "))

if (x<=1):
	x=1
	print(round(x, 2))
elif (x>1 and x<=2):
	x=2 
	print(x)
		
-- ERROR:
File "XXXX", line 6
    elif (not (x=1) and (x>1) and (x<=2)):
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:44:51) 
-- CODE:
x= float(input("valor de x: "))

if (x<=1):
	fx=1
	print(round(fx, 2))
elif (x>1 and x<=2):
	fx=2 
	print(round(x, 2)
elif (x>2 and x<=3):
	fx=x**2
	print(round(fx, 2))
			
		
-- ERROR:
File "XXXX", line 9
    elif (x>2 and x<=3):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:46:12) 
-- CODE:
x= float(input("valor de x: "))

if (x<=1):
	fx=1
	print(round(fx, 2))
elif (x>1 and x<=2):
	fx=2 
	print(round(fx, 2))
elif (x>2 and x<=3):
	fx=x**2
	print(round(fx, 2))
	
-- ERROR:
File "XXXX", line 9
    elif (x>2 and x<=3):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:46:57) 
-- CODE:
x= float(input("valor de x: "))

if (x<=1):
	fx=1
	print(round(fx, 2))
elif (x>1 and x<=2):
	fx=2 
	print(round(fx, 2))
elif (x>2 and x<=3):
	fx=x**2
	print(round(fx, 2))
elif (x>3):
	fx=x**3
	print(round(fx, 2))
-- OUTPUT:
46.66
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 18:47:07) 
-- CODE:
x= float(input("valor de x: "))

if (x<=1):
	fx=1
	print(round(fx, 2))
elif (x>1 and x<=2):
	fx=2 
	print(round(fx, 2))
elif (x>2 and x<=3):
	fx=x**2
	print(round(fx, 2))
elif (x>3):
	fx=x**3
	print(round(fx, 2))
-- EXECUTION TIME:
0.224043
-- TEST CASE 1:
---- input:
3.6
---- correct output:
46.66
---- user output:
46.66
-- TEST CASE 2:
---- input:
2.9
---- correct output:
8.41
---- user output:
8.41
-- TEST CASE 3:
---- input:
1.2
---- correct output:
2
---- user output:
2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
